--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "es5-shim": "~3.1.0",
     "bootstrap": "~3.2.0",
     "angular-sanitize": "~1.2.0",
-    "angular-touch": "~1.2.0"
+    "angular-touch": "~1.2.0",
+    "angular-google-maps": "~2.0.18"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
