--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "~4.0.0"
+    "express": "~4.0.0",
+    "q": "^1.2.0",
+    "underscore": "~1.4.2"
   }
 }
